2h Bank Portfolio Tracker 1.0.1 - all file i/o through Filepath
All file i/o now goes through net.runelite.client.util.Filepath, as asked on
runelite/plugin-hub#16536:

 - the data directory comes from Plugin.getPluginDirectory(), resolved lazily
   off the startUp thread; @PluginDescriptor sets internalName and
   legacyDataDirectory ("bank-portfolio-tracker"), so RuneLite moves an
   existing ~/.runelite/bank-portfolio-tracker/ into
   ~/.runelite/plugin-data/bank-portfolio-tracker/ once
 - reads, atomic writes, the stale-file sweep and quarantine all use Filepath
   (openInputStream, write, moveTo, walk, delete); no java.io.File,
   java.nio.file.Files/Paths/Path, RUNELITE_DIR or Filepath.Unchecked remains
 - FileIoRuleTest holds src/main to that rule
 - client pinned to 1.12.39, where Filepath starts

Also in this version: the display name is now "2h Bank Portfolio Tracker";
each row reads in three lines (the stack's value and move, then
"quantity x price" and one item's move); a row opens in place to show its
detail; hover text is optional and off by default; the "Show stack value on
rows" option is removed (its stored key is cleared at startUp) and the gp
change sort ranks by the whole stack.